--- a/public/layout/styles/layout.css
+++ b/public/layout/styles/layout.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 @import url("fontawesome-free/css/fontawesome-all.min.css");
-@import url("http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css");
+@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css");
 @import url("framework.css");
 
 /* Rows
@@ -23,12 +23,12 @@
 
 /* Page Intro
 --------------------------------------------------------------------------------------------------------------- */
-#pageintro{padding:70px 0 170px;}/* 200px => 80px for #introblocks negative margin */
+#pageintro{padding:150px 0 270px;}/* 200px => 80px for #introblocks negative margin */
 
 #pageintro article, #pageintro article p{display:block; max-width:75%; margin:0 auto; text-align:center;}
 #pageintro article p{max-width:65%; line-height:2rem; margin-top: -8px}
 #pageintro .heading{margin-bottom:20px; font-size:3.5rem;}
-#pageintro footer{margin-top:20px;}
+#pageintro footer{margin-top:80px;}
 
 
 /* Content Area
