--- a/public/layout/styles/framework.css
+++ b/public/layout/styles/framework.css
@@ -3,7 +3,7 @@
 html{overflow-y:scroll; overflow-x:hidden;}
 html, body{margin:0; padding:0; font-size:14px; line-height:1.6em;}
 
-*, *::before, *::after{box-sizing:border-box;}
+*, *::before, *::after{box-sizing:border-box;outline: none!important;}
 
 .bold{font-weight:bold;}
 .center{text-align:center;}
@@ -38,7 +38,7 @@ blockquote::before{display:block; position:absolute; top:0; left:0; font-family:
 .clear::before, .clear::after, .group::before, .group::after{display:table; content:"";}
 .clear, .clear::after, .group, .group::after{clear:both;}
 
-a{outline:none; text-decoration:none!important;}
+a{text-decoration:none!important;}
 
 .fl_left, .imgl{float:left;}
 .fl_right, .imgr{float:right;}
@@ -63,7 +63,7 @@ h1, h2, h3, h4, h5, h6, .heading{font-family:Georgia, "Times New Roman", Times, 
 --------------------------------------------------------------------------------------------------------------- */
 form, fieldset, legend{margin:0; padding:0; border:none;}
 legend{display:none;}
-label, input, textarea, select, button{display:block; resize:none; outline:none; color:inherit; font-size:inherit; font-family:inherit; vertical-align:middle;}
+label, input, textarea, select, button{display:block; resize:none; outline:none!important; color:inherit; font-size:inherit; font-family:inherit; vertical-align:middle;}
 label{margin-bottom:5px;}
 :required, :invalid{outline:none; box-shadow:none;}
 ::placeholder{opacity:1;}/* Makes sure the placeholder text is not transparent */
