--- a/src/components/modal-wrapper/modal-wrapper.styles.scss
+++ b/src/components/modal-wrapper/modal-wrapper.styles.scss
@@ -7,6 +7,8 @@
     background-color: white;
     border-radius: 7px;
     border: 0;
+    box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.11),
+      0 5px 15px 0 rgba(0, 0, 0, 0.08);
   }
 
   .Overlay {
@@ -18,3 +20,23 @@
     z-index: 100;
     background-color: rgba(22, 18, 18, 0.6);
   }
+
+  .Card {
+    margin-left: 25%;
+    background-color: white;
+    padding: 32px;
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.11),
+      0 5px 15px 0 rgba(0, 0, 0, 0.08);
+    box-sizing: border-box;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+  }
+  
