--- a/src/components/upload/upload.styles.scss
+++ b/src/components/upload/upload.styles.scss
@@ -25,9 +25,10 @@
 }
 
 .Actions {
+  width: 100%;
   display: flex;
   flex: 1;
-  align-items: flex-end;
+  align-items: flex-start;
   flex-direction: column;
   margin-top: 32px;
 }
