--- a/src/components/category/category.styles.scss
+++ b/src/components/category/category.styles.scss
@@ -1,3 +1,23 @@
 .clickable:hover {
     cursor: pointer;
 }
+
+.Card {
+    margin: 4% 7%;
+    background-color: white;
+    padding: 32px;
+    width: 60%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.11),
+      0 5px 15px 0 rgba(0, 0, 0, 0.08);
+    box-sizing: border-box;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+  }
+  
