--- a/src/components/modal-wrapper/modal-wrapper.styles.scss
+++ b/src/components/modal-wrapper/modal-wrapper.styles.scss
@@ -1,4 +1,7 @@
 .Modal {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
     position: absolute;
     top: 40px;
     left: 40px;
@@ -21,24 +24,4 @@
     background-color: rgba(22, 18, 18, 0.6);
   }
 
-  .Card {
-    position: absolute;
-    bottom: 40px;
-    margin-left: 20%;
-    background-color: white;
-    padding: 32px;
-    width: 60%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.11),
-      0 5px 15px 0 rgba(0, 0, 0, 0.08);
-    box-sizing: border-box;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-  }
   
