removed unnecessary files, added styles for sign in sign up page

--- a/src/pages/copyright-footer/copyright-footer.styles.scss
+++ b/src/pages/copyright-footer/copyright-footer.styles.scss
@@ -19,7 +19,7 @@ html {
 }
 
 body {
-  background-color: #ecf0f1;
+  background-color: white;
   min-width: 300px;
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
