--- a/public/layout/styles/layout.css
+++ b/public/layout/styles/layout.css
@@ -4,15 +4,6 @@
 @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css");
 @import url("framework.css");
 
-/* Rows
---------------------------------------------------------------------------------------------------------------- */
-.row0, .row0 a{}
-.row1, .row1 a{}
-.row2, .row2 a{}
-.row3, .row3 a{}
-.row4, .row4 a{}
-.row5, .row5 a{}
-
 
 /* Header
 --------------------------------------------------------------------------------------------------------------- */
@@ -33,12 +24,12 @@
 
 /* Content Area
 --------------------------------------------------------------------------------------------------------------- */
-.container{padding:80px 0;}
+.container{padding:40px 0;}
 
 /* Content */
 .container .content{}
 
-.sectiontitle{display:block; max-width:55%; margin:0 auto 80px; text-align:center;}
+.sectiontitle{display:block; max-width:55%; margin:0 auto 50px; text-align:center;}
 .sectiontitle *{margin:0;}
 
 .elements{}
@@ -53,85 +44,6 @@
 
 /* Introblocks */
 #introblocks{display:block; position:relative; margin:-160px 0 130px 0; z-index:1;}/* 160px => 80px + container padding */
-
-/* Services */
-#services{}
-#services .elements article{border-radius:0;}
-
-/* Shout */
-.shout{}
-.shout figure{display:block; max-width:546px;/* same width as the image - contains the caption */}
-.shout figure img{}
-.shout figure figcaption{display:block; position:relative;}
-.shout figure figcaption a{display:block; position:relative; padding:15px; border:solid; border-width:0 1px 1px 1px;}
-.shout figure figcaption a::after{position:absolute; top:12px; right:15px; width:30px; height:30px; line-height:30px; font-family:"Font Awesome\ 5 Free"; font-weight:900; content:"\f105";/* fa-angle-right */ text-align:center; border-radius:50%;}
-
-/* Team Members */
-.team{}
-.team li:last-child{margin-bottom:0;}/* Used when elements stack in small viewports */
-.team figure{display:block; text-align:center;}
-.team figure *{margin:0; padding:0;}
-.team figure a{}
-.team figure img{}
-.team figure figcaption{padding:20px 10px; line-height:1; border:solid; border-width:0 1px 1px 1px;}
-.team figure strong{display:block; margin-bottom:8px; font-size:1.4rem; font-weight:400;}
-.team figure em{display:block; font-style:normal; font-size:.8rem;}
-
-/* Easy Pie Charts */
-.pr-charts{}
-.pr-charts .pr-chart-ctrl{display:block; float:left; width:25%; min-height:200px;}
-.pr-charts .pr-chart-ctrl .pr-chart{display:block; position:relative; width:100%; margin:0 0 20px 0; text-align:center;}
-.pr-charts .pr-chart-ctrl .pr-chart canvas{display:block; margin:0 auto; padding:0; vertical-align:top;}
-.pr-charts .pr-chart-ctrl .pr-chart i{position:absolute; top:0; left:0; width:100%; height:200px; line-height:200px; font-size:18px; font-style:normal;}/* Must have same height & line height as set in the javascript size element to vertical align centre */
-.pr-charts .pr-chart-ctrl p{margin:0; padding:0; text-transform:uppercase;}
-
-/* Testimonials */
-#testimonials{}
-#testimonials article{text-align:center;}
-#testimonials article *{margin:0; padding:0;}
-#testimonials article figure{display:inline-block; margin-bottom:20px;}
-#testimonials article figure img{float:left; margin-right:15px; border-radius:50%;}
-#testimonials article figure figcaption{float:left; margin-top:30px; font-size:1.4rem; text-align:left;}
-#testimonials article figure figcaption .heading{font-size:1.4rem;}
-#testimonials article figure figcaption em{display:block; margin-top:-5px; font-size:.8rem; font-style:normal;}
-#testimonials article blockquote{margin-bottom:20px; padding:20px; border-radius:25px 0;}
-#testimonials article blockquote::before{top:15px; left:15px; font-size:30px; line-height:30px;}
-
-/* Latest */
-#latest{}
-#latest > li:last-child{margin-bottom:0;}/* Used when elements stack in small viewports */
-#latest article{}
-#latest article figure{}
-#latest article figure img{}
-#latest article .meta{display:block; margin:0 0 15px 0; padding:5px 10px;}
-#latest article .meta li{display:block; float:left; width:50%; font-size:.8rem;}
-#latest article .meta li:last-child{text-align:right;}
-#latest article .meta li i{margin-right:5px;}
-#latest article .excerpt{display:block; max-width:85%; margin:0 auto; padding:15px 0 15px 15px; border-left:1px solid;}
-#latest article .excerpt time{display:block; margin-bottom:8px; text-transform:uppercase; font-size:.8rem; font-style:normal; line-height:1;}
-#latest article .excerpt .heading{margin:0; padding:0; font-size:1.2rem;}
-
-/* Comments */
-#comments ul{margin:0 0 40px 0; padding:0; list-style:none;}
-#comments li{margin:0 0 10px 0; padding:15px;}
-#comments .avatar{float:right; margin:0 0 10px 10px; padding:3px; border:1px solid;}
-#comments address{font-weight:bold;}
-#comments time{font-size:smaller;}
-#comments .comcont{display:block; margin:0; padding:0;}
-#comments .comcont p{margin:10px 5px 10px 0; padding:0;}
-
-#comments form{display:block; width:100%;}
-#comments input, #comments textarea{width:100%; padding:10px; border:1px solid;}
-#comments textarea{overflow:auto;}
-#comments div{margin-bottom:15px;}
-#comments input[type="submit"], #comments input[type="reset"]{display:inline-block; width:auto; min-width:150px; margin:0; padding:8px 5px; cursor:pointer;}
-
-/* Sidebar */
-.container .sidebar{}
-
-.sidebar .sdb_holder{margin-bottom:50px;}
-.sidebar .sdb_holder:last-child{margin-bottom:0;}
-
 
 /* Contact Details
 --------------------------------------------------------------------------------------------------------------- */
@@ -149,6 +61,17 @@
 #ctdetails input{display:block; width:100%; padding:15px; margin-bottom:20px;}
 #ctdetails button{padding:8px 18px 10px; text-transform:uppercase; font-weight:400; cursor:pointer;}
 
+/*Sign up Sign In
+--------------------------------------------------------------------------------------------------------------- */
+.heading {
+	color: #000;
+	font-weight: 800;
+}
+
+.signInButtons {
+	display: flex;
+	justify-content: space-evenly;
+}
 
 /* Footer
 --------------------------------------------------------------------------------------------------------------- */
@@ -184,14 +107,6 @@ Delete it completely to stop fading
 --------------------------------------------------------------------------------------------------------------- */
 *, *::before, *::after{transition:all .3s ease-in-out;}
 #mainav form *{transition:none !important;}
-
-
-/* ------------------------------------------------------------------------------------------------------------ */
-/* ------------------------------------------------------------------------------------------------------------ */
-/* ------------------------------------------------------------------------------------------------------------ */
-/* ------------------------------------------------------------------------------------------------------------ */
-/* ------------------------------------------------------------------------------------------------------------ */
-
 
 /* Navigation
 --------------------------------------------------------------------------------------------------------------- */
@@ -233,22 +148,6 @@ nav ul, nav ol{margin:0; padding:0; list-style:none;}
 #breadcrumb li:last-child a::after{display:none;}
 #breadcrumb .heading{margin:0; font-size:2rem;}
 
-/* Sidebar Navigation */
-.sidebar nav{display:block; width:100%;}
-.sidebar nav li{margin:0 0 3px 0; padding:0;}
-.sidebar nav a{display:block; position:relative; margin:0; padding:5px 10px 5px 15px; text-decoration:none; border:solid; border-width:0 0 1px 0;}
-.sidebar nav a::after{top:10px; left:5px; content:"\f0da";}
-.sidebar nav ul ul a{padding-left:35px;}
-.sidebar nav ul ul a::after{left:25px;}
-.sidebar nav ul ul ul a{padding-left:55px;}
-.sidebar nav ul ul ul a::after{left:45px;}
-
-/* Pagination */
-.pagination{display:block; width:100%; text-align:center; clear:both;}
-.pagination li{display:inline-block; margin:0 2px 0 0;}
-.pagination li:last-child{margin-right:0;}
-.pagination a, .pagination strong{display:block; padding:8px 11px; border:1px solid; background-clip:padding-box; font-weight:normal;}
-
 /* Back to Top */
 #backtotop{z-index:999; display:inline-block; position:fixed; visibility:hidden; bottom:20px; right:20px; width:36px; height:36px; line-height:36px; font-size:16px; text-align:center; opacity:.2;}
 #backtotop i{display:block; width:100%; height:100%; line-height:inherit;}
@@ -263,13 +162,6 @@ table, th{table-layout:auto;}
 table{width:100%; margin-bottom:15px;}
 th, td{padding:5px 8px;}
 td{border-width:0 1px;}
-
-
-/* Gallery
---------------------------------------------------------------------------------------------------------------- */
-#gallery{display:block; width:100%; margin-bottom:50px;}
-#gallery figure figcaption{display:block; width:100%; clear:both;}
-#gallery li{margin-bottom:30px;}
 
 
 /* Font Awesome Social Icons
@@ -288,14 +180,6 @@ td{border-width:0 1px;}
 .faicon-linkedin:hover{background-color:#0E76A8;}
 .faicon-twitter:hover{background-color:#00ACEE;}
 .faicon-vk:hover{background-color:#4E658E;}
-
-
-/* ------------------------------------------------------------------------------------------------------------ */
-/* ------------------------------------------------------------------------------------------------------------ */
-/* ------------------------------------------------------------------------------------------------------------ */
-/* ------------------------------------------------------------------------------------------------------------ */
-/* ------------------------------------------------------------------------------------------------------------ */
-
 
 /* Colours
 --------------------------------------------------------------------------------------------------------------- */
@@ -326,8 +210,7 @@ input:focus, textarea:focus, *:required:focus{border-color:#97A9BD !important;}
 
 
 /* Rows */
-.row0, .row0 a{}
-.row1{color:#FFFFFF; background-color:#000000;}
+.row1{color:#FFFFFF; background-color:#000000;position: fixed;z-index: 100;}
 .row2{color:#474747; background-color:#F4F4F4;}
 .row3{color:#474747; background-color:#FFFFFF;}
 .row4{color:#A5A6AA; background-color:#000000;}
@@ -377,6 +260,7 @@ input:focus, textarea:focus, *:required:focus{border-color:#97A9BD !important;}
 
 
 /* Contact Details */
+#ctdetails {margin-top: 9%; }
 #ctdetails figure > ul li{color:inherit; background-color:#FFFFFF;}
 #ctdetails figure > ul li:hover a{color:#FFFFFF;}
 #ctdetails figure > ul li:hover, #ctdetails figure > ul li a i{color:#FFFFFF; background-color:#97A9BD;}/* Default */
@@ -429,13 +313,6 @@ tr:nth-child(even), #comments li:nth-child(even){color:inherit; background-color
 table a, #comments a{background-color:inherit;}
 
 
-/* ------------------------------------------------------------------------------------------------------------ */
-/* ------------------------------------------------------------------------------------------------------------ */
-/* ------------------------------------------------------------------------------------------------------------ */
-/* ------------------------------------------------------------------------------------------------------------ */
-/* ------------------------------------------------------------------------------------------------------------ */
-
-
 /* Media Queries
 --------------------------------------------------------------------------------------------------------------- */
 @-ms-viewport{width:device-width;}
@@ -474,6 +351,10 @@ table a, #comments a{background-color:inherit;}
 
 	#copyright{}
 	#copyright p:first-of-type{margin-bottom:10px;}
+
+	#ctdetails {
+		margin-top: 13%;
+	}
 }
 
 @media screen and (max-width:750px){
@@ -503,16 +384,11 @@ table a, #comments a{background-color:inherit;}
 }
 
 @media screen and (min-width:451px) and (max-width:900px){
-	.pr-charts .pr-chart-ctrl{width:50%; margin-bottom:50px;}
-	.pr-charts .pr-chart-ctrl:nth-child(n+3){margin-bottom:0;}
+	
 }
 
 @media screen and (max-width:450px){
-	.pr-charts .pr-chart-ctrl{width:100%; margin-bottom:50px;}
-	.pr-charts .pr-chart-ctrl:last-child{margin-bottom:0;}
 
-	#testimonials article figure img{float:none; margin:0 0 20px 0;}
-	#testimonials article figure figcaption{float:none; margin:0; text-align:center;}
 }
 
 
