--- a/src/components/category/category.styles.scss
+++ b/src/components/category/category.styles.scss
@@ -2,6 +2,11 @@
     cursor: pointer;
 }
 
+.categoryHeading {
+  color: white;
+  font-weight: 600;
+}
+
 .Card {
     margin: 4% 7%;
     background-color: white;
