--- a/src/components/middle-container/middle-container.styles.scss
+++ b/src/components/middle-container/middle-container.styles.scss
@@ -3,66 +3,12 @@
 	background-image: url('../../static/images/background/01.png');
 }
 
-//Convert button styles
-.button {
-  font-size: 25px;
-  line-height: 1;
+.mainHeading {
+  color: white;
+  margin-bottom: 20px;
+  font-size: 3.5rem;
+}
+
+.mainHeading + p {
   color: #fff;
-  letter-spacing: 0.025em;
-
-  background: #13c276;
-  padding: 15px;
-  cursor: pointer;
-  border: 0;
-  border-radius: 8px;
-  min-width: 120px;
-  overflow: hidden;
-
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.button span {
-  display: block;
-  position: relative;
-  z-index: 10;
-}
-
-.button:after,
-.button:before {
-  padding: 45px 5px 11px 5px;
-  content: '';
-  position: absolute;
-  top: 0;
-  left: calc(-100% - 30px);
-  height: calc(100% - 29px);
-  width: calc(100% + 20px);
-  color: #fff;
-  border-radius: 2px;
-  transform: skew(-25deg);
-}
-
-.button:after {
-  background: #fff;
-  transition: left 0.8s cubic-bezier(0.86, 0, 0.07, 1) 0.2s;
-  z-index: 0;
-  opacity: 0.8;
-}
-
-.button:before {
-  background: black;
-  z-index: 5;
-  transition: left 1s cubic-bezier(0.86, 0, 0.07, 1);
-}
-
-.button:hover:after {
-  left: calc(0% - 10px);
-  transition: left 0.8s cubic-bezier(0.86, 0, 0.07, 1);
-}
-
-.button:hover:before {
-  left: calc(0% - 10px);
-  transition: left 1s cubic-bezier(0.86, 0, 0.07, 1);
 }
