--- a/src/components/category/category.styles.scss
+++ b/src/components/category/category.styles.scss
@@ -7,10 +7,17 @@
   font-weight: 600;
 }
 
+.closeButton {
+  padding-top: 3px;
+  margin-left: auto;
+  font-weight: bold;
+  cursor: pointer;
+}
+
 .Card {
-    margin: 4% 7%;
+    margin: 10% 6% 7% 6%;
+    padding: 0 10px 10px 10px;
     background-color: white;
-    padding: 32px;
     width: 60%;
     display: flex;
     align-items: center;
@@ -25,4 +32,3 @@
     justify-content: center;
     font-size: calc(10px + 2vmin);
   }
-  
