--- a/src/components/modal-wrapper/modal-wrapper.styles.scss
+++ b/src/components/modal-wrapper/modal-wrapper.styles.scss
@@ -1,20 +1,4 @@
-.Modal {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    position: absolute;
-    top: 40px;
-    left: 40px;
-    right: 40px;
-    bottom: 40px;
-    background-color: white;
-    border-radius: 7px;
-    border: 0;
-    box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.11),
-      0 5px 15px 0 rgba(0, 0, 0, 0.08);
-  }
-
-  .Overlay {
+.Overlay {
     position: fixed;
     top: 0;
     left: 0;
@@ -24,4 +8,8 @@
     background-color: rgba(22, 18, 18, 0.6);
   }
 
-  
+  .Modal{
+    display: flex;
+    justify-content: center;
+    min-height: 100vh;
+  }
