--- a/src/components/nav-bar-icon/nav-bar-icon.styles.scss
+++ b/src/components/nav-bar-icon/nav-bar-icon.styles.scss
@@ -1,5 +1,16 @@
 .header__logo {
     float: left;
     font-weight: 700;
-    padding: 16px 25px;
+    padding: 6px 25px;
+    margin-top: 3px;
 }
+
+.logoname {
+    font-family: 'Sacramento', cursive;
+}
+
+@media screen and (max-width: 600px) {
+    .header__logo {
+        margin-top: 4px;
+    }
+  }
